...
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        centerTitle: true,
        title: const Text(
          "Recetario",
          textAlign: TextAlign.center,
        ),
        backgroundColor: Colors.white,
        elevation: 10,
        automaticallyImplyLeading: false,
        shadowColor: Colors.grey,
...
